crates/pgls_pretty_print/tests/snapshots/single/tests__nested_dollar_quotes_conflict_0_80.snap
---
source: crates/pgls_pretty_print/tests/tests.rs
input_file: crates/pgls_pretty_print/tests/data/single/nested_dollar_quotes_conflict_0.sql
snapshot_kind: text
---
create function test_conflict()
returns void
language plpgsql
as $function$
BEGIN
  EXECUTE $$SELECT 1$$;
END;
$function$;
