crates/pgls_pretty_print/tests/snapshots/single/tests__null_test_0_80.snap
---
source: crates/pgls_pretty_print/tests/tests.rs
input_file: crates/pgls_pretty_print/tests/data/single/null_test_0.sql
snapshot_kind: text
---
SELECT * FROM users WHERE email IS NULL;
