crates/pgls_pretty_print/tests/snapshots/single/tests__nullif_expr_0_100.snap
---
source: crates/pgls_pretty_print/tests/tests.rs
input_file: crates/pgls_pretty_print/tests/data/single/nullif_expr_0_100.sql
snapshot_kind: text
---
SELECT NULLIF(name, 'John') FROM users;
